--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -44,7 +44,7 @@
                     </g>
                 </svg>
             </i> Mascotas</a>
-            <a href="#"><i class="icon">
+            <a href="#" data-page="profile"><i class="icon">
                 <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24"
                     fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
                     style="transform: translateY(1.3px);">
@@ -395,6 +395,202 @@
                     <textarea id="appointment-notes" class="form-control" rows="3" placeholder="Información adicional importante para la cita"></textarea>
                 </div>
                 <button type="submit" class="submit-btn">Programar cita</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- El cuerpo muestra solo el "Profile Page" para visualización -->
+    <div id="profile-page" class="page">
+        <div class="container">
+            <div class="page-header">
+                <h1>Mi Perfil</h1>
+                <p>Gestiona tu información personal y configuración</p>
+            </div>
+
+            <div class="profile-container">
+                <!-- Sidebar con información personal -->
+                <div class="profile-sidebar">
+                    <div class="profile-photo">
+                        <img src="/api/placeholder/150/150" alt="Foto de perfil">
+                        <div class="edit-icon">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"></path>
+                                <path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"></path>
+                            </svg>
+                        </div>
+                    </div>
+                    <div class="profile-name">
+                        <h2>María García</h2>
+                        <p>Cliente desde: 12/08/2022</p>
+                    </div>
+                    <div class="profile-stats">
+                        <div class="stat-item">
+                            <div class="stat-value">5</div>
+                            <div class="stat-label">Mascotas</div>
+                        </div>
+                        <div class="stat-item">
+                            <div class="stat-value">12</div>
+                            <div class="stat-label">Citas</div>
+                        </div>
+                    </div>
+                    <div class="action-buttons2">
+                        <a href="#" class="btn btn-primary btn-block">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"></path>
+                                <path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"></path>
+                            </svg>
+                            Editar Perfil
+                        </a>
+                        <a href="#" class="btn btn-outline btn-block">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <path d="M15.05 5A5 5 0 0 1 19 8.95M15.05 1A9 9 0 0 1 23 8.94m-1 7.98v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"></path>
+                            </svg>
+                            Contactar Soporte
+                        </a>
+                    </div>
+                </div>
+
+                <!-- Contenido principal del perfil -->
+                <div class="profile-content">
+                    <!-- Información personal -->
+                    <div class="content-card">
+                        <div class="card-header">
+                            <h3>Información Personal</h3>
+                        </div>
+                        <div class="row">
+                            <div class="col">
+                                <div class="form-group">
+                                    <label>Nombre</label>
+                                    <input type="text" class="form-control" value="María García" disabled>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col">
+                                <div class="form-group">
+                                    <label>Teléfono</label>
+                                    <input type="tel" class="form-control" value="+34 612 345 678" disabled>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label>Dirección</label>
+                            <input type="text" class="form-control" value="Calle Principal 123, 28001 Madrid" disabled>
+                        </div>
+                    </div>
+
+                    <!-- Notificaciones -->
+                    <div class="content-card">
+                        <div class="card-header">
+                            <h3>Notificaciones recientes</h3>
+                            <a href="#" class="btn btn-outline ver-todas">Ver todas</a>
+                        </div>
+                        <div class="notification">
+                            <div class="notification-content">
+                                <div class="notification-icon">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                        <rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect>
+                                        <line x1="16" y1="2" x2="16" y2="6"></line>
+                                        <line x1="8" y1="2" x2="8" y2="6"></line>
+                                        <line x1="3" y1="10" x2="21" y2="10"></line>
+                                    </svg>
+                                </div>
+                                <div class="notification-text">
+                                    <h4>Recordatorio de cita</h4>
+                                    <p>Luna tiene una cita mañana a las 10:00 AM</p>
+                                </div>
+                            </div>
+                            <div class="notification-time">
+                                Hace 2 horas
+                            </div>
+                            <button class="close-btn">×</button>
+                        </div>
+                        <div class="notification">
+                            <div class="notification-content">
+                                <div class="notification-icon">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                        <path d="M20 6L9 17l-5-5"></path>
+                                    </svg>
+                                </div>
+                                <div class="notification-text">
+                                    <h4>Vacunación completada</h4>
+                                    <p>La vacunación de Simba ha sido registrada con éxito</p>
+                                </div>
+                            </div>
+                            <div class="notification-time">
+                                Ayer
+                            </div>
+                            <button class="close-btn">×</button>
+                        </div>
+                        <div class="notification">
+                            <div class="notification-content">
+                                <div class="notification-icon">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                        <path d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"></path>
+                                        <circle cx="9" cy="7" r="4"></circle>
+                                        <path d="M22 21v-2a4 4 0 0 0-3-3.87"></path>
+                                        <path d="M16 3.13a4 4 0 0 1 0 7.75"></path>
+                                    </svg>
+                                </div>
+                                <div class="notification-text">
+                                    <h4>Nuevo veterinario asignado</h4>
+                                    <p>Dr. Carlos Martínez está ahora a cargo de tus mascotas</p>
+                                </div>
+                            </div>
+                            <div class="notification-time">
+                                Hace 3 días
+                            </div>
+                            <button class="close-btn">×</button>
+                        </div>
+                    </div>
+
+                    <!-- Configuración -->
+                    <div class="content-card">
+                        <div class="card-header">
+                            <h3>Configuración</h3>
+                        </div>
+                        <div class="setting-row">
+                            <div class="setting-description">
+                                <h4>Notificaciones por email</h4>
+                                <p>Recibir recordatorios de citas y actualizaciones</p>
+                            </div>
+                            <label class="switch">
+                                <input type="checkbox" checked>
+                                <span class="slider"></span>
+                            </label>
+                        </div>
+                        <div class="setting-row">
+                            <div class="setting-description">
+                                <h4>Notificaciones SMS</h4>
+                                <p>Recibir alertas urgentes en tu teléfono</p>
+                            </div>
+                            <label class="switch">
+                                <input type="checkbox" checked>
+                                <span class="slider"></span>
+                            </label>
+                        </div>
+                        <div class="setting-row">
+                            <div class="setting-description">
+                                <h4>Boletín mensual</h4>
+                                <p>Noticias y consejos para el cuidado de tus mascotas</p>
+                            </div>
+                            <label class="switch">
+                                <input type="checkbox">
+                                <span class="slider"></span>
+                            </label>
+                        </div>
+                        <div class="setting-row">
+                            <div class="setting-description">
+                                <h4>Modo oscuro</h4>
+                                <p>Cambiar a interfaz oscura</p>
+                            </div>
+                            <label class="switch">
+                                <input type="checkbox">
+                                <span class="slider"></span>
+                            </label>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
