--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -62,7 +62,7 @@
                     <polyline points="16 17 21 12 16 7"></polyline>
                     <line x1="21" y1="12" x2="9" y2="12"></line>
                 </svg>
-                Cerrar Sesión</a>
+                Iniciar Sesión</a>
         </div>
     </header>
 
