--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -377,7 +377,7 @@
                             </div>
                             <div class="info-item">
                                 <div class="info-label">Dueño</div>
-                                <div class="info-value">María García</div>
+                                <div class="info-value">Samuel Riveira Escudero</div>
                             </div>
                         </div>
                     </div>
@@ -468,17 +468,16 @@
                 <!-- Sidebar con información personal -->
                 <div class="profile-sidebar">
                     <div class="profile-photo">
-                        <img src="/api/placeholder/150/150" alt="Foto de perfil">
+                        <img src="../imagenes/img_perfil.png" alt="Foto de perfil">
                         <div class="edit-icon">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                 <path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"></path>
                                 <path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"></path>
                             </svg>
                         </div>
                     </div>
                     <div class="profile-name">
-                        <h2>María García</h2>
-                        <p>Cliente desde: 12/08/2022</p>
+                        <h2>Samuel Riveira Escudero</h2>
                     </div>
                     <div class="profile-stats">
                         <div class="stat-item">
@@ -518,7 +517,7 @@
                             <div class="col">
                                 <div class="form-group">
                                     <label>Nombre</label>
-                                    <input type="text" class="form-control" value="María García" disabled>
+                                    <input type="text" class="form-control" value="Samuel Riveira Escudero" disabled>
                                 </div>
                             </div>
                         </div>
