--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -141,7 +141,7 @@
                                 <path d="M19 16v6"></path>
                             </svg>                          
                             Pedir cita</a>
-                        <a href="#" id="registrarse-start" class="btn btn-outline">
+                        <a href="#" id="registrarse-start" class="btn btn-outline" onclick="activar(); abrir()">
                             <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                 <path d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"></path>
                                 <circle cx="9" cy="7" r="4"></circle>
