Cambio icono Web

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -67,8 +67,7 @@
     <!-- Header & Navigation -->
     <header>
         <div class="logo">
-            <div class="logo-icon">C</div>
-            CuidaPet
+            <img class="logo-icon" src="../imagenes/CuidaPet_azul_v2.png" alt="">
         </div>
         <nav>
             <a href="#" data-page="home" class="active"><i class="icon">
