--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CuidaPet - Gestión de Mascotas</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="shortcut icon" href="../imagenes/CuidaPet_azul_v2_icon.png" type="image/x-icon">
 </head>
 <body>
 
@@ -67,7 +68,7 @@
     <!-- Header & Navigation -->
     <header>
         <div class="logo">
-            <img class="logo-icon" src="../imagenes/CuidaPet_azul_v2.png" alt="">
+            <img class="logo-icon" src="../imagenes/CuidaPet_azul_v2_icon.png" alt="">
         </div>
         <nav>
             <a href="#" data-page="home" class="active"><i class="icon">
