Lectura de mascotas y detalles de la mascota a partir de getPetsData

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -222,125 +222,7 @@
             </div>
 
             <div class="pets-grid">
-                <!-- Pet Card 1 -->
-                <div class="pet-card" data-pet-id="luna">
-                    <div style="position: relative;">
-                        <img src="/imagenes/img_luna.jpg" alt="Foto de Luna">
-                        <span class="pet-age">3 años</span>
-                    </div>
-                    <div class="pet-info">
-                        <span class="pet-type">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                <path d="M11.25 16.25h1.5L12 17z"></path>
-                                <path d="M16 14v.5"></path>
-                                <path d="M4.42 11.247A13.152 13.152 0 0 0 4 14.556C4 18.728 7.582 21 12 21s8-2.272 8-6.444a11.702 11.702 0 0 0-.493-3.309"></path>
-                                <path d="M8 14v.5"></path>
-                                <path d="M8.5 8.5c-.384 1.05-1.083 2.028-2.344 2.5-1.931.722-3.576-.297-3.656-1-.113-.994 1.177-6.53 4-7 1.923-.321 3.651.845 3.651 2.235A7.497 7.497 0 0 1 14 5.277c0-1.39 1.844-2.598 3.767-2.277 2.823.47 4.113 6.006 4 7-.08.703-1.725 1.722-3.656 1-1.261-.472-1.855-1.45-2.239-2.5"></path>
-                            </svg>
-                            Perro</span>
-                        <h3 class="pet-name">Luna</h3>
-                        <p class="pet-breed">Golden Retriever</p>
-                        <div class="pet-appointment">
-                            <strong>Próxima cita:</strong> 10/06/2025
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Pet Card 2 -->
-                <div class="pet-card" data-pet-id="simba">
-                    <div style="position: relative;">
-                        <img src="/imagenes/img_simba.jpg" alt="Foto de Simba">
-                        <span class="pet-age">5 años</span>
-                    </div>
-                    <div class="pet-info">
-                        <span class="pet-type">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                <path d="M11.25 16.25h1.5L12 17z"></path>
-                                <path d="M16 14v.5"></path>
-                                <path d="M4.42 11.247A13.152 13.152 0 0 0 4 14.556C4 18.728 7.582 21 12 21s8-2.272 8-6.444a11.702 11.702 0 0 0-.493-3.309"></path>
-                                <path d="M8 14v.5"></path>
-                                <path d="M8.5 8.5c-.384 1.05-1.083 2.028-2.344 2.5-1.931.722-3.576-.297-3.656-1-.113-.994 1.177-6.53 4-7 1.923-.321 3.651.845 3.651 2.235A7.497 7.497 0 0 1 14 5.277c0-1.39 1.844-2.598 3.767-2.277 2.823.47 4.113 6.006 4 7-.08.703-1.725 1.722-3.656 1-1.261-.472-1.855-1.45-2.239-2.5"></path>
-                            </svg>
-                            Gato</span>
-                        <h3 class="pet-name">Simba</h3>
-                        <p class="pet-breed">Gato Persa</p>
-                        <div class="pet-appointment">
-                            <strong>Próxima cita:</strong> 22/06/2025
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Pet Card 3 -->
-                <div class="pet-card" data-pet-id="rocky">
-                    <div style="position: relative;">
-                        <img src="/imagenes/img_rocky.jpg" alt="Foto de Rocky">
-                        <span class="pet-age">2 años</span>
-                    </div>
-                    <div class="pet-info">
-                        <span class="pet-type">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                <path d="M11.25 16.25h1.5L12 17z"></path>
-                                <path d="M16 14v.5"></path>
-                                <path d="M4.42 11.247A13.152 13.152 0 0 0 4 14.556C4 18.728 7.582 21 12 21s8-2.272 8-6.444a11.702 11.702 0 0 0-.493-3.309"></path>
-                                <path d="M8 14v.5"></path>
-                                <path d="M8.5 8.5c-.384 1.05-1.083 2.028-2.344 2.5-1.931.722-3.576-.297-3.656-1-.113-.994 1.177-6.53 4-7 1.923-.321 3.651.845 3.651 2.235A7.497 7.497 0 0 1 14 5.277c0-1.39 1.844-2.598 3.767-2.277 2.823.47 4.113 6.006 4 7-.08.703-1.725 1.722-3.656 1-1.261-.472-1.855-1.45-2.239-2.5"></path>
-                            </svg>
-                            Perro</span>
-                        <h3 class="pet-name">Rocky</h3>
-                        <p class="pet-breed">Bulldog Francés</p>
-                        <div class="pet-appointment">
-                            <strong>Próxima cita:</strong> No programada
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Pet Card 4 -->
-                <div class="pet-card" data-pet-id="mia">
-                    <div style="position: relative;">
-                        <img src="/imagenes/img_mia.jpg" alt="Foto de Mia">
-                        <span class="pet-age">8 meses</span>
-                    </div>
-                    <div class="pet-info">
-                        <span class="pet-type">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                <path d="M11.25 16.25h1.5L12 17z"></path>
-                                <path d="M16 14v.5"></path>
-                                <path d="M4.42 11.247A13.152 13.152 0 0 0 4 14.556C4 18.728 7.582 21 12 21s8-2.272 8-6.444a11.702 11.702 0 0 0-.493-3.309"></path>
-                                <path d="M8 14v.5"></path>
-                                <path d="M8.5 8.5c-.384 1.05-1.083 2.028-2.344 2.5-1.931.722-3.576-.297-3.656-1-.113-.994 1.177-6.53 4-7 1.923-.321 3.651.845 3.651 2.235A7.497 7.497 0 0 1 14 5.277c0-1.39 1.844-2.598 3.767-2.277 2.823.47 4.113 6.006 4 7-.08.703-1.725 1.722-3.656 1-1.261-.472-1.855-1.45-2.239-2.5"></path>
-                            </svg>
-                            Gato</span>
-                        <h3 class="pet-name">Mia</h3>
-                        <p class="pet-breed">Siamés</p>
-                        <div class="pet-appointment">
-                            <strong>Próxima cita:</strong> 02/08/2025
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Pet Card 5 -->
-                <div class="pet-card" data-pet-id="max">
-                    <div style="position: relative;">
-                        <img src="/imagenes/img_max.jpg" alt="Foto de Max">
-                        <span class="pet-age">6 años</span>
-                    </div>
-                    <div class="pet-info">
-                        <span class="pet-type">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                <path d="M11.25 16.25h1.5L12 17z"></path>
-                                <path d="M16 14v.5"></path>
-                                <path d="M4.42 11.247A13.152 13.152 0 0 0 4 14.556C4 18.728 7.582 21 12 21s8-2.272 8-6.444a11.702 11.702 0 0 0-.493-3.309"></path>
-                                <path d="M8 14v.5"></path>
-                                <path d="M8.5 8.5c-.384 1.05-1.083 2.028-2.344 2.5-1.931.722-3.576-.297-3.656-1-.113-.994 1.177-6.53 4-7 1.923-.321 3.651.845 3.651 2.235A7.497 7.497 0 0 1 14 5.277c0-1.39 1.844-2.598 3.767-2.277 2.823.47 4.113 6.006 4 7-.08.703-1.725 1.722-3.656 1-1.261-.472-1.855-1.45-2.239-2.5"></path>
-                            </svg>
-                            Perro</span>
-                        <h3 class="pet-name">Max</h3>
-                        <p class="pet-breed">Beagle</p>
-                        <div class="pet-appointment">
-                            <strong>Próxima cita:</strong> 27/09/2025
-                        </div>
-                    </div>
-                </div>
+                <!--Construcción mediante JavaScript-->
             </div>
         </div>
     </div>
@@ -406,42 +288,42 @@
                     <a href="#" class="back-button" data-page="pets">
                         <span>←</span> Volver a mis mascotas
                     </a>
-        
-                    <h1>Luna</h1>
+
+                    <h1>Nombre de la mascota</h1>
                     <p><span class="pet-type pet-tag">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                            <path d="M11.25 16.25h1.5L12 17z"></path>
-                            <path d="M16 14v.5"></path>
-                            <path d="M4.42 11.247A13.152 13.152 0 0 0 4 14.556C4 18.728 7.582 21 12 21s8-2.272 8-6.444a11.702 11.702 0 0 0-.493-3.309"></path>
-                            <path d="M8 14v.5"></path>
-                            <path d="M8.5 8.5c-.384 1.05-1.083 2.028-2.344 2.5-1.931.722-3.576-.297-3.656-1-.113-.994 1.177-6.53 4-7 1.923-.321 3.651.845 3.651 2.235A7.497 7.497 0 0 1 14 5.277c0-1.39 1.844-2.598 3.767-2.277 2.823.47 4.113 6.006 4 7-.08.703-1.725 1.722-3.656 1-1.261-.472-1.855-1.45-2.239-2.5"></path>
-                        </svg>
-                        Perro</span> Golden Retriever
+                    <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <path d="M11.25 16.25h1.5L12 17z"></path>
+                        <path d="M16 14v.5"></path>
+                        <path d="M4.42 11.247A13.152 13.152 0 0 0 4 14.556C4 18.728 7.582 21 12 21s8-2.272 8-6.444a11.702 11.702 0 0 0-.493-3.309"></path>
+                        <path d="M8 14v.5"></path>
+                        <path d="M8.5 8.5c-.384 1.05-1.083 2.028-2.344 2.5-1.931.722-3.576-.297-3.656-1-.113-.994 1.177-6.53 4-7 1.923-.321 3.651.845 3.651 2.235A7.497 7.497 0 0 1 14 5.277c0-1.39 1.844-2.598 3.767-2.277 2.823.47 4.113 6.006 4 7-.08.703-1.725 1.722-3.656 1-1.261-.472-1.855-1.45-2.239-2.5"></path>
+                    </svg>
+                    Tipo</span> Raza
                     </p>
                 </div>
                 <div class="container-right">
                     <p>Próxima cita</p>
-                    <h2>10/06/2025</h2>
+                    <h2>Fecha</h2>
                 </div>
             </div>
 
             <div class="pet-profile">
                 <div class="pet-photo">
-                    <img src="/imagenes/img_luna.jpg" alt="Foto de Luna">
+                    <img src="/api/placeholder/400/320" alt="Foto de la mascota">
                     <div class="basic-info">
                         <h3>Información básica</h3>
                         <div class="info-grid">
                             <div class="info-item">
                                 <div class="info-label">Edad</div>
-                                <div class="info-value">3 años</div>
+                                <div class="info-value">Edad</div>
                             </div>
                             <div class="info-item">
                                 <div class="info-label">Peso</div>
-                                <div class="info-value">28.5 kg</div>
+                                <div class="info-value">Peso</div>
                             </div>
                             <div class="info-item">
                                 <div class="info-label">Dueño</div>
-                                <div class="info-value">Samuel Riveira Escudero</div>
+                                <div class="info-value">Nombre del dueño</div>
                             </div>
                         </div>
                     </div>
@@ -451,20 +333,18 @@
                     <div class="medical-history">
                         <h3>Historial médico</h3>
                         <ul class="medical-list">
-                            <li>Vacunación completa</li>
-                            <li>Esterilización (02/02/2024)</li>
-                            <li>Tratamiento antipulgas (05/04/2025)</li>
+                            <!-- Se llenará dinámicamente -->
                         </ul>
                     </div>
 
                     <div class="allergies">
                         <h3>Alergias</h3>
-                        <span class="allergy-tag">Kiwi</span>
+                        <!-- Se llenará dinámicamente -->
                     </div>
 
                     <div class="special-notes">
                         <h3>Notas especiales</h3>
-                        <p>Luna es muy juguetona y sociable. Tiene preferencia por premios de hígado.</p>
+                        <p>Sin notas específicas.</p>
                     </div>
                 </div>
             </div>
@@ -810,5 +690,6 @@
     </div>
 
     <script src="script.js"></script>
+    <script src="getPetsData.js"></script>
 </body>
 </html>
