--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -6,6 +6,8 @@
     <title>CuidaPet - Gestión de Mascotas</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" href="../imagenes/CuidaPet_azul_v2_icon.png" type="image/x-icon">
+    <script src="PetManager.js"></script>
+    <script src="getPetsData.js"></script>
 </head>
 <body>
 
@@ -269,10 +271,6 @@
                     <div class="form-group">
                         <label for="pet-photo">Foto</label>
                         <input type="file" id="pet-photo" class="form-control" accept="image/*">
-                    </div>
-                    <div class="form-group">
-                        <label for="pet-appointment">Próxima cita (opcional)</label>
-                        <input type="date" id="pet-appointment" class="form-control">
                     </div>
                     <button type="submit" class="btn btn-primary btn-block">Guardar Mascota</button>
                 </form>
@@ -690,6 +688,5 @@
     </div>
 
     <script src="script.js"></script>
-    <script src="getPetsData.js"></script>
 </body>
 </html>
