--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -6,7 +6,7 @@
     <title>CuidaPet - Gestión de Mascotas</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" href="../imagenes/CuidaPet_azul_v2_icon.png" type="image/x-icon">
-    <script src="PetManager.js"></script>
+    <script src="Scripts/petManager.js"></script>
     <script src="getPetsData.js"></script>
 </head>
 <body>
@@ -687,6 +687,11 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="Scripts/petManager.js"></script>
+    <script src="Scripts/navigation.js"></script>
+    <script src="Scripts/petView.js"></script>
+    <script src="Scripts/petForm.js"></script>
+    <script src="Scripts/login.js"></script>
+    <script src="Scripts/main.js"></script>
 </body>
 </html>
