CSS dividido por módulos

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CuidaPet - Gestión de Mascotas</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="CSS/appointment.css">
+    <link rel="stylesheet" href="CSS/auth.css">
+    <link rel="stylesheet" href="CSS/base.css">
+    <link rel="stylesheet" href="CSS/forms.css">
+    <link rel="stylesheet" href="CSS/header.css">
+    <link rel="stylesheet" href="CSS/home.css">
+    <link rel="stylesheet" href="CSS/modals.css">
+    <link rel="stylesheet" href="CSS/pets.css">
+    <link rel="stylesheet" href="CSS/profile.css">
+    <link rel="stylesheet" href="CSS/responsive.css">
+    <link rel="stylesheet" href="CSS/utils.css">
     <link rel="shortcut icon" href="../imagenes/CuidaPet_azul_v2_icon.png" type="image/x-icon">
-    <script src="Scripts/petManager.js"></script>
-    <script src="getPetsData.js"></script>
 </head>
 <body>
 
