--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="CSS/profile.css">
     <link rel="stylesheet" href="CSS/responsive.css">
     <link rel="stylesheet" href="CSS/utils.css">
-    <link rel="shortcut icon" href="../imagenes/CuidaPet_azul_v2_icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/Frontend/imagenes/CuidaPet_azul_v2_icon.png" type="image/x-icon">
 </head>
 <body>
 
