Añadido editar, falta terminarlo y pulirlo un poco

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="CSS/profile.css">
     <link rel="stylesheet" href="CSS/responsive.css">
     <link rel="stylesheet" href="CSS/utils.css">
-    <link rel="shortcut icon" href="/Frontend/imagenes/CuidaPet_azul_v2_icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="imagenes/CuidaPet_azul_v2_icon.png" type="image/x-icon">
 </head>
 <body>
 
@@ -722,5 +722,6 @@
     <script src="Scripts/petManager.js"></script>
     <script src="Scripts/petView.js"></script>
     <script src="Scripts/petForm.js"></script>
+    <script src="Scripts/petEdit.js"></script>
 </body>
 </html>
