--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -77,7 +77,7 @@
     <!-- Header & Navigation -->
     <header>
         <div class="logo">
-            <img class="logo-icon" src="../imagenes/CuidaPet_azul_v2_icon.png" alt="">
+            <img class="logo-icon" src="/Frontend/imagenes/CuidaPet_azul_v2_icon.png" alt="">
         </div>
         <nav>
             <a href="#" data-page="home" class="active"><i class="icon">
@@ -162,7 +162,7 @@
                 </div>
                 
                 <div class="hero-image">
-                    <img src="/imagenes/perrito_veterinario.png" alt="Veterinario con mascota">
+                    <img src="/Frontend/imagenes/perrito_veterinario.png" alt="Veterinario con mascota">
                 </div>
             </article>
         </section>
@@ -179,7 +179,7 @@
                 <article class="services-grid">
                     <div class="service-card">
                         <div class="service-image">
-                            <img src="/imagenes/img_vacuna.png" alt="Vacunas">
+                            <img src="/Frontend/imagenes/img_vacuna.png" alt="Vacunas">
                         </div>
                         <div class="service-info">
                             <h3>Vacunas</h3>
@@ -189,7 +189,7 @@
 
                     <div class="service-card">
                         <div class="service-image">
-                            <img src="/imagenes/img_revision_general.png" alt="Revisión general">
+                            <img src="/Frontend/imagenes/img_revision_general.png" alt="Revisión general">
                         </div>
                         <div class="service-info">
                             <h3>Revisión general</h3>
@@ -199,7 +199,7 @@
 
                     <div class="service-card">
                         <div class="service-image">
-                            <img src="/imagenes/img_esterilizacion_y_castracion.png" alt="Esterilización y castración">
+                            <img src="/Frontend/imagenes/img_esterilizacion_y_castracion.png" alt="Esterilización y castración">
                         </div>
                         <div class="service-info">
                             <h3>Esterilización y castración</h3>
@@ -335,7 +335,7 @@
 
             <div class="pet-profile">
                 <div class="pet-photo">
-                    <img src="/api/placeholder/400/320" alt="Foto de la mascota">
+                    <img src="" alt="Foto de la mascota">
                     <div class="basic-info">
                         <h3>Información básica</h3>
                         <div class="info-grid">
@@ -410,7 +410,7 @@
                         </div>
                         <div class="appointment-content">
                             <div class="pet-info-brief">
-                                <img src="../imagenes/img_luna.jpg" alt="Luna" class="pet-thumbnail">
+                                <img src="/Frontend/imagenes/img_luna.jpg" alt="Luna" class="pet-thumbnail">
                                 <div class="pet-details">
                                     <h3 class="pet-name">Luna</h3>
                                     <p class="appointment-type">Vacunación</p>
@@ -445,7 +445,7 @@
                         </div>
                         <div class="appointment-content">
                             <div class="pet-info-brief">
-                                <img src="../imagenes/img_simba.jpg" alt="Simba" class="pet-thumbnail">
+                                <img src="/Frontend/imagenes/img_simba.jpg" alt="Simba" class="pet-thumbnail">
                                 <div class="pet-details">
                                     <h3 class="pet-name">Simba</h3>
                                     <p class="appointment-type">Revisión general</p>
@@ -480,7 +480,7 @@
                         </div>
                         <div class="appointment-content">
                             <div class="pet-info-brief">
-                                <img src="../imagenes/img_rocky.jpg" alt="Rocky" class="pet-thumbnail">
+                                <img src="/Frontend/imagenes/img_rocky.jpg" alt="Rocky" class="pet-thumbnail">
                                 <div class="pet-details">
                                     <h3 class="pet-name">Rocky</h3>
                                     <p class="appointment-type">Peluquería</p>
@@ -552,7 +552,7 @@
                 <!-- Sidebar con información personal -->
                 <div class="profile-sidebar">
                     <div class="profile-photo">
-                        <img src="../imagenes/img_perfil.png" alt="Foto de perfil">
+                        <img src="/Frontend/imagenes/img_perfil.png" alt="Foto de perfil">
                         <div class="edit-icon">
                             <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                 <path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"></path>
