--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="CSS/home.css">
     <link rel="stylesheet" href="CSS/modals.css">
     <link rel="stylesheet" href="CSS/pets.css">
-    <link rel="stylesheet" href="CSS/profile.css">
+    <link rel="stylesheet" href="CSS/petProfile.css">
     <link rel="stylesheet" href="CSS/responsive.css">
     <link rel="stylesheet" href="CSS/utils.css">
     <link rel="shortcut icon" href="imagenes/CuidaPet_azul_v2_icon.png" type="image/x-icon">
