--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -615,7 +615,8 @@
     <script src="Scripts/main.js"></script>
     <script src="Scripts/login.js"></script>
     <script src="Scripts/navigation.js"></script>
-    <script src="Scripts/appointmentsManager.js"></script>
+    <script src="Scripts/AppointmentManager.js"></script>
+    <script src="Scripts/AppointmentUI.js"></script>
     <script src="Scripts/petDelete.js"></script>
     <script src="Scripts/petManager.js"></script>
     <script src="Scripts/petView.js"></script>
