--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -396,7 +396,7 @@
             <!-- Formulario para programar nueva cita -->
             <div class="appointment-section">
                 <h2>Programar nueva cita</h2>
-                <div class="appointment-form">
+                <form class="appointment-form">
                     <div class="form-group">
                         <label for="pet-select">Mascota</label>
                         <select id="pet-select" class="form-control">
@@ -418,7 +418,7 @@
                         <input type="time" id="appointment-time" class="form-control">
                     </div>
                     <button type="submit" class="submit-btn">Programar cita</button>
-                </div>
+                </form>
             </div>
         </div>
     </div>
