Mascotas de clientes listos a falta de diseño y edición de información

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -378,6 +378,23 @@
         </div>
     </div>
 
+    <!-- Client Pets Page -->
+    <div id="client-pets-page" class="page">
+        <div class="container">
+            <div class="container-top">
+                <div class="container-left">
+                    <a href="#" class="back-button" id="client-pets-back-button" data-page="">← Volver</a>
+                    <h1 id="client-pets-title">Mascotas de Cliente</h1>
+                    <p>Todas las mascotas registradas de este cliente</p>
+                </div>
+            </div>
+
+            <div class="pets-list">
+                <!-- Se cargará dinámicamente con las mascotas del cliente -->
+            </div>
+        </div>
+    </div>
+
     <!-- Appointments Page -->
     <div id="appointments-page" class="page">
         <div class="container">
