Administración de citas en empleado

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CuidaPet - Gestión de Mascotas</title>
     <link rel="stylesheet" href="CSS/appointment.css">
+    <link rel="stylesheet" href="CSS/appointments.css">
     <link rel="stylesheet" href="CSS/auth.css">
     <link rel="stylesheet" href="CSS/base.css">
     <link rel="stylesheet" href="CSS/forms.css">
@@ -506,6 +507,7 @@
     <script src="Scripts/login.js"></script>
     <script src="Scripts/navigation.js"></script>
     <script src="Scripts/AppointmentManager.js"></script>
+    <script src="Scripts/AppointmentDataManager.js"></script>
     <script src="Scripts/AppointmentUI.js"></script>
     <script src="Scripts/petDelete.js"></script>
     <script src="Scripts/petManager.js"></script>
