añadido estado cita en cliente

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -15,8 +15,9 @@
     <link rel="stylesheet" href="CSS/pets.css">
     <link rel="stylesheet" href="CSS/profile.css">
     <link rel="stylesheet" href="CSS/responsive.css">
-    <link rel="stylesheet" href="CSS/utils.css">
     <link rel="stylesheet" href="CSS/roles.css">
+    <link rel="stylesheet" href="CSS/appointment-status.css">
+    <link rel="stylesheet" href="CSS/utils.css">
     <link rel="shortcut icon" href="imagenes/CuidaPet_azul_v2_icon.png" type="image/x-icon">
 </head>
 <body>
@@ -408,7 +409,8 @@
             <div class="upcoming-appointments">
                 <h2>Próximas Citas</h2>
                 <div class="appointments-grid">
-                    
+                    <!-- Las citas se cargarán dinámicamente aquí -->
+                    <!-- Cada tarjeta de cita mostrará su estado (pendiente, completada, cancelada) -->
                 </div>
             </div>
 
