Base de datos con Supabase

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -523,5 +523,6 @@
     <script src="Scripts/RoleUIManager.js"></script>
     <script src="Scripts/navigation.js"></script>
     <script src="Scripts/app-init.js"></script>
+    <script type="module" src="Scripts/APIS.js"></script>
 </body>
 </html>
