separación correcta de login

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -507,8 +507,8 @@
     </div>
 
     <script src="Scripts/main.js"></script>
-    <script src="Scripts/login.js"></script>
-    <script type="module" src="Scripts/login2.js"></script>
+    <script src="Scripts/openLogin.js"></script>
+    <script type="module" src="Scripts/login.js"></script>
     <script src="Scripts/navigation.js"></script>
     <script src="Scripts/AppointmentManager.js"></script>
     <script src="Scripts/AppointmentDataManager.js"></script>
