Lectura de profile mediante api

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -518,8 +518,8 @@
     <script src="Scripts/petView.js"></script>
     <script src="Scripts/petForm.js"></script>
     <script src="Scripts/petEdit.js"></script>
-    <script src="Scripts/ProfileManager.js"></script>
-    <script src="Scripts/ProfileUI.js"></script>
+    <script type="module" src="Scripts/ProfileManager.js"></script>
+    <script type="module" src="Scripts/ProfileUI.js"></script>
     <!-- Sistema de roles y autenticación -->
     <script type="module" src="Scripts/UserAuthManager.js"></script>
     <script type="module" src="Scripts/RoleUIManager.js"></script>
